created basic modules for aphid

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,2 +1,8 @@
 rootProject.name = "Aphid"
 include ':app'
+include ':base'
+include ':data'
+include ':base-android'
+include ':data-android'
+include ':domain'
+include ':spoonacular-kotlin'
