--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,9 @@ import com.beetlestance.buildsrc.Libs
 
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
+    ext {
+        kotlin_version = '1.4.0'
+    }
     repositories {
         google()
         jcenter()
@@ -9,6 +12,7 @@ buildscript {
     dependencies {
         classpath Libs.androidGradlePlugin
         classpath Libs.Kotlin.gradlePlugin
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
