dependencies updated for newly added modules resources moved to base-android

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,4 +48,7 @@ dependencies {
 
     // Material Design
     implementation Libs.Google.material
+
+    // Kotlin
+    implementation Libs.Kotlin.stdlib
 }
