--- a/data/build.gradle
+++ b/data/build.gradle
@@ -1,13 +1,17 @@
+import com.beetlestance.buildsrc.Libs
+
 plugins {
     id 'java-library'
     id 'kotlin'
 }
 
 java {
-    sourceCompatibility = JavaVersion.VERSION_1_7
-    targetCompatibility = JavaVersion.VERSION_1_7
+    sourceCompatibility = JavaVersion.VERSION_1_8
+    targetCompatibility = JavaVersion.VERSION_1_8
 }
 
 dependencies {
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+
+    // Kotlin
+    implementation Libs.Kotlin.stdlib
 }
