--- a/data/build.gradle
+++ b/data/build.gradle
@@ -12,6 +12,9 @@ java {
 
 dependencies {
 
+    // Local projects
+    implementation project(':base')
+
     // Kotlin
     implementation Libs.Kotlin.stdlib
 }
