--- a/data-android/build.gradle
+++ b/data-android/build.gradle
@@ -36,6 +36,11 @@ android {
 
 dependencies {
 
+    // Local projects
+    implementation project(':base')
+    implementation project(':data')
+    implementation project(':base-android')
+
     // Testing
     testImplementation Libs.Test.junit
     androidTestImplementation Libs.AndroidX.Test.junit
