--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -36,6 +36,13 @@ android {
 
 dependencies {
 
+    // Local projects
+    implementation project(':base')
+    implementation project(':data')
+    implementation project(':base-android')
+    implementation project(':data-android')
+    implementation project(':spoonacular-kotlin')
+
     // Testing
     testImplementation Libs.Test.junit
     androidTestImplementation Libs.AndroidX.Test.junit
