--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,7 @@ buildscript {
     dependencies {
         classpath Libs.androidGradlePlugin
         classpath Libs.Kotlin.gradlePlugin
+        classpath Libs.Kotlin.extensions
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
