--- a/mdc-theme-lint/build.gradle
+++ b/mdc-theme-lint/build.gradle
@@ -13,7 +13,7 @@ java {
 dependencies {
 
     // Kotlin
-    implementation Libs.Kotlin.stdlib
+    implementation Libs.Kotlin.jdk7
 
     compileOnly Libs.Lint.api
     compileOnly Libs.Lint.checks
