lint checks enabled

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,6 +47,9 @@ dependencies {
     implementation project(':domain')
     implementation project(':spoonacular-kotlin')
 
+    // Lint checks
+    lintChecks project(':mdc-theme-lint')
+
     // Testing
     testImplementation Libs.Test.junit
     androidTestImplementation Libs.AndroidX.Test.junit
