--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,8 +12,13 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - name: Generate build number
+          shell: bash
+          run: |
+            echo "::set-env name=BUILD_NUMBER::$(expr $GITHUB_RUN_NUMBER + 5200)"
+
       - uses: actions/checkout@v2
-      - name: set up JDK 1.8
+      - name: Set up JDK 1.8
         uses: actions/setup-java@v1
         with:
           java-version: 1.8
