spotlight added ci-gradle.properties added scheduled.yml for dependencies updates check added

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,6 +11,10 @@ kapt {
     useBuildCache = true
 }
 
+ext {
+    ci = System.getenv("CI") == "true"
+}
+
 android {
     compileSdkVersion buildConfig.compileSdk
 
