--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,5 @@
 import com.beetlestance.buildsrc.Libs
+import com.beetlestance.buildsrc.Versions
 
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
@@ -23,6 +24,11 @@ buildscript {
     }
 }
 
+plugins {
+    id 'com.diffplug.spotless' version '5.3.0'
+    id 'com.github.ben-manes.versions' version '0.29.0'
+}
+
 allprojects {
     repositories {
         google()
@@ -32,6 +38,19 @@ allprojects {
 }
 
 subprojects {
+
+    apply plugin: 'com.diffplug.spotless'
+    spotless {
+        kotlin {
+            target '**/*.kt'
+            targetExclude("$buildDir/**/*.kt")
+            targetExclude('bin/**/*.kt')
+
+            ktlint(Versions.ktlint)
+            licenseHeaderFile rootProject.file('spotless/copyright.kt')
+        }
+    }
+
     tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).configureEach {
         kotlinOptions {
             // Treat all Kotlin warnings as errors
@@ -50,8 +69,4 @@ subprojects {
             jvmTarget = "1.8"
         }
     }
-}
-
-task clean(type: Delete) {
-    delete rootProject.buildDir
 }
