--- a/base-android/build.gradle
+++ b/base-android/build.gradle
@@ -12,10 +12,10 @@ kapt {
 }
 
 android {
-    compileSdkVersion buildConfig.compileSdk
+    compileSdkVersion 29
 
     defaultConfig {
-        minSdkVersion buildConfig.minSdk
+        minSdkVersion 21
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
