Updated to Gradle 6.7-rc-1.
Added org.gradle.vfs.watch=true
for details see https://docs.gradle.org/6.7-rc-1/release-notes.html

--- a/gradle.properties
+++ b/gradle.properties
@@ -26,3 +26,8 @@ org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 org.gradle.parallel=true
+# In an incremental build, input and output files are checked to determine what needs to be rebuilt.
+# This feature typically saves a lot of time; however, it adds some I/O overhead,
+# which can be noticeable in large projects when not much has changed since the previous build.
+org.gradle.vfs.watch=true
+
