--- a/gradle.properties
+++ b/gradle.properties
@@ -30,4 +30,5 @@ org.gradle.parallel=true
 # This feature typically saves a lot of time; however, it adds some I/O overhead,
 # which can be noticeable in large projects when not much has changed since the previous build.
 org.gradle.vfs.watch=true
-
+# Set to all to log all warnings. --warning-mode=(all,fail,none,summary)
+org.gradle.warning.mode=all
