Gradle Properties Flag Added
added new flag to generate lint stacktrace

--- a/gradle.properties
+++ b/gradle.properties
@@ -19,6 +19,9 @@ kapt.incremental.apt=true
 kapt.use.worker.api=true
 # Kotlin code style for this project: "official" or "obsolete":
 kotlin.code.style=official
+# print stacktrace for lint
+LINT_PRINT_STACKTRACE=true
+# Enable build caching
 org.gradle.caching=true
 org.gradle.configureondemand=true
 org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8
