--- a/.github/workflows/scheduled.yml
+++ b/.github/workflows/scheduled.yml
@@ -16,6 +16,9 @@ jobs:
         with:
           java-version: 1.8
 
+      - name: Copy CI gradle.properties
+        run: mkdir -p ~/.gradle ; cp .github/ci-gradle.properties ~/.gradle/gradle.properties
+
       - name: Check dependency updates
         run: ./gradlew dependencyUpdates
 
