--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,7 +15,7 @@ jobs:
       - name: Generate build number
         shell: bash
         run: |
-          echo "::set-env name=BUILD_NUMBER::$(expr $GITHUB_RUN_NUMBER + 5200)"
+          echo "name=BUILD_NUMBER::$(expr $GITHUB_RUN_NUMBER + 5200)" >> GITHUB_ENV
 
       - uses: actions/checkout@v2
       - name: Set up JDK 1.8
