--- a/gradle.properties
+++ b/gradle.properties
@@ -6,6 +6,13 @@
 # http://www.gradle.org/docs/current/userguide/build_environment.html
 # Automatically convert third-party libraries to use AndroidX
 android.enableJetifier=true
+# Enable non-transitive R class namespacing where each library only contains
+# references to the resources it declares instead of declarations plus all
+# transitive dependency references.
+# https://www.mobileit.cz/Blog/Pages/r-class.aspx
+android.nonTransitiveRClass=true
+# Generate compile-time only R class for app modules.
+android.enableAppCompileTimeRClass=true
 # AndroidX package structure to make it clearer which packages are bundled with the
 # Android operating system, and which are packaged with your app"s APK
 # https://developer.android.com/topic/libraries/support-library/androidx-rn
