--- a/gradle.properties
+++ b/gradle.properties
@@ -29,7 +29,7 @@ LINT_PRINT_STACKTRACE=true
 org.gradle.caching=true
 org.gradle.configureondemand=true
 # Specifies the JVM arguments used for the daemon process.
-org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8
+org.gradle.jvmargs=-Xmx2048m -XX:+UseParallelGC -Dfile.encoding=UTF-8
 # When configured, Gradle will run in incubating parallel mode.
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
