configuration cache enabled

--- a/gradle.properties
+++ b/gradle.properties
@@ -34,6 +34,13 @@ org.gradle.jvmargs=-Xmx2048m -XX:+UseParallelGC -Dfile.encoding=UTF-8
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 org.gradle.parallel=true
+# The configuration cache is conceptually similar to the build cache, but caches different information.
+# The build cache takes care of caching the outputs and intermediate files of the build,
+# such as task outputs or artifact transform outputs. The configuration cache takes care of caching
+# the build configuration for a particular set of tasks. In other words, the configuration cache
+# saves the output of the configuration phase, and the build cache saves the outputs of the
+# execution phase.
+org.gradle.unsafe.configuration-cache=true
 # In an incremental build, input and output files are checked to determine what needs to be rebuilt.
 # This feature typically saves a lot of time; however, it adds some I/O overhead,
 # which can be noticeable in large projects when not much has changed since the previous build.
