--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -11,7 +11,7 @@ android-lint = "27.3.0-alpha05"
 # Android X
 androidx-compose = "1.0.0-beta07"
 androidx-lifecycle = "2.4.0-alpha01"
-androidx-room = "2.3.0"
+androidx-room = "2.4.0-alpha02"
 androidx-test = "1.3.0"
 androidx-hilt = "1.0.0"
 
@@ -158,10 +158,6 @@ okhttp-url-connection = { module = "com.squareup.okhttp3:okhttp-urlconnection", 
 # Retrofit
 retrofit-converter-moshi = { module = "com.squareup.retrofit2:converter-moshi", version.ref = "retrofit" }
 retrofit-core = { module = "com.squareup.retrofit2:retrofit", version.ref = "retrofit" }
-
-# Roomigrant
-roomigrant-core = { module = "com.github.chrisbanes.Roomigrant:RoomigrantLib", version = "master-SNAPSHOT" }
-roomigrant-compiler = { module = "com.github.chrisbanes.Roomigrant:RoomigrantCompiler", version = "master-SNAPSHOT" }
 
 # Test
 test-junit-core = { module = "junit:junit", version = "4.13.2" }
