--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -2,31 +2,31 @@
 # Plugins
 ktlint = "0.37.2"
 spotless = "5.12.5"
-ben-manes-dependency-updates = "0.38.0"
+ben-manes-dependency-updates = "0.39.0"
 
 # Android
 android-gradle-plugin = "7.0.0-beta03"
 android-lint = "27.3.0-alpha05"
 
 # Android X
-androidx-compose = "1.0.0-beta07"
+androidx-compose = "1.0.0-beta08"
 androidx-lifecycle = "2.4.0-alpha01"
 androidx-room = "2.4.0-alpha02"
 androidx-test = "1.3.0"
 androidx-hilt = "1.0.0"
 
 #Coil
-coil = "1.2.1"
+coil = "1.2.2"
 
 # Google
-google-accompanist = "0.10.0"
+google-accompanist = "0.11.1"
 google-dagger = "2.36"
 
 # Kotlin
-kotlin = "1.4.32"
+kotlin = "1.5.10"
 
 # Kotlin Coroutines
-kotlinx-coroutines = "1.4.3"
+kotlinx-coroutines = "1.5.0"
 
 # Moshi
 moshi = "1.12.0"
@@ -123,15 +123,15 @@ google-hilt-gradle-plugin = { module = "com.google.dagger:hilt-android-gradle-pl
 google-hilt-testing = { module = "com.google.dagger:hilt-android-testing", version.ref = "google-dagger" }
 
 # Google Material Theme
-google-material-compose-theme-adapter = { module = "com.google.android.material:compose-theme-adapter", version = "1.0.0-beta07" }
-google-material-core = { module = "com.google.android.material:material", version = "1.4.0-beta01" }
+google-material-compose-theme-adapter = { module = "com.google.android.material:compose-theme-adapter", version = "1.0.0-beta08" }
+google-material-core = { module = "com.google.android.material:material", version = "1.4.0-rc01" }
 
 # Google Firebase
 google-firebase-crashlytics = { module = "com.google.firebase:firebase-crashlytics", version = "17.2.1" }
 #google-firebase-crashlytics-gradle-plugin = { module = "com.google.firebase:firebase-crashlytics-gradle", version = "2.2.0" }
 
 # Google Truth
-google-truth = { module = "com.google.truth:truth", version = "1.1" }
+google-truth = { module = "com.google.truth:truth", version = "1.1.3" }
 
 # Leak Canary
 leakcanary = { module = "com.squareup.leakcanary:leakcanary-android", version = "2.2" }
