--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -5,7 +5,7 @@ spotless = "5.12.5"
 ben-manes-dependency-updates = "0.39.0"
 
 # Android
-android-gradle-plugin = "7.0.0-beta03"
+android-gradle-plugin = "7.1.0-alpha02"
 android-lint = "27.3.0-alpha05"
 
 # Android X
