--- a/.github/workflows/refactor.yml
+++ b/.github/workflows/refactor.yml
@@ -38,13 +38,10 @@ jobs:
       - name: Reformat Code
         run: ./gradlew spotlessApply
 
-      - name: Build and check
-        run: ./gradlew app:assembleDebug lintDebug testDebug --scan --stacktrace
-
       - name: Commit refactored code
         uses: stefanzweifel/git-auto-commit-action@v4
         with:
-          branch: ${{ github.head_ref }}-refactored
+          branch: github.head_ref-refactored
           commit_message: Spotless Applied, Code Reformatted
           commit_user_name: GitHub Actions
           commit_user_email: actions@github.com
@@ -54,6 +51,6 @@ jobs:
         if: steps.auto-commit-action.outputs.changes_detected == 'true'
         uses: peter-evans/create-pull-request@v3
         with:
-          branch: ${{ github.head_ref }}-refactored
-          title: Refactored code for branch name ${{ github.head_ref }}
+          branch: github.head_ref-refactored
+          title: Refactored code for branch name github.head_ref
           body: This is an auto refactored code.
