--- a/.github/workflows/refactor.yml
+++ b/.github/workflows/refactor.yml
@@ -43,6 +43,11 @@ jobs:
         run: echo "##[set-output name=branch;]$(echo ${GITHUB_REF#refs/heads/})"
         id: new_branch_name
 
+      - name: Create github branch
+        uses: peterjgrainger/action-create-branch@v2.0.1
+        with:
+          branch: ${{ steps.new_branch_name.outputs.branch }}-refactored
+
       - name: Commit refactored code
         uses: stefanzweifel/git-auto-commit-action@v4
         with:
