--- a/.github/workflows/refactor.yml
+++ b/.github/workflows/refactor.yml
@@ -45,6 +45,8 @@ jobs:
 
       - name: Create github branch
         uses: peterjgrainger/action-create-branch@v2.0.1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           branch: ${{ steps.new_branch_name.outputs.branch }}-refactored
 
