--- a/.github/workflows/refactor.yml
+++ b/.github/workflows/refactor.yml
@@ -62,7 +62,7 @@ jobs:
           commit_user_email: actions@github.com
 
       - name: Checkout to base branch
-      - uses: actions/checkout@v2
+        uses: actions/checkout@v2
         with:
           ref: ${{ steps.new_branch_name.outputs.branch }}
 
