reset base branch or else there will be no diff

--- a/.github/workflows/refactor.yml
+++ b/.github/workflows/refactor.yml
@@ -66,6 +66,11 @@ jobs:
         with:
           ref: ${{ steps.new_branch_name.outputs.branch }}
 
+      - name: Reset base branch
+        run: |
+          git fetch origin ${{ steps.new_branch_name.outputs.branch }}:${{ steps.new_branch_name.outputs.branch }}
+          git reset --hard ${{ steps.new_branch_name.outputs.branch }}
+
       - name: Create Pull Request if changes have been detected
         if: steps.auto-commit-action.outputs.changes_detected == 'true'
         uses: peter-evans/create-pull-request@v3
