--- a/.github/workflows/refactor.yml
+++ b/.github/workflows/refactor.yml
@@ -63,13 +63,9 @@ jobs:
 
       - name: Checkout to base branch
         uses: actions/checkout@v2
-        with:
-          ref: ${{ steps.new_branch_name.outputs.branch }}
 
       - name: Reset base branch
-        run: |
-          git fetch --update-head-ok
-          git pull
+        run: git reset --hard HEAD
 
       - name: Create Pull Request if changes have been detected
         if: steps.auto-commit-action.outputs.changes_detected == 'true'
