--- a/.github/workflows/refactor.yml
+++ b/.github/workflows/refactor.yml
@@ -61,18 +61,12 @@ jobs:
           commit_user_name: GitHub Actions
           commit_user_email: actions@github.com
 
-      - name: Checkout to base branch
-        uses: actions/checkout@v2
-
-      - name: Reset base branch
-        run: git reset --hard HEAD
-
       - name: Create Pull Request if changes have been detected
         if: steps.auto-commit-action.outputs.changes_detected == 'true'
         uses: peter-evans/create-pull-request@v3
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          branch: ${{ steps.new_branch_name.outputs.branch }}-refactored
+          branch: ${{ steps.new_branch_name.outputs.branch }}
           title: Refactored code for branch name ${{ steps.new_branch_name.outputs.branch }}
           body: This is an auto refactored code.
