--- a/.github/workflows/refactor.yml
+++ b/.github/workflows/refactor.yml
@@ -48,7 +48,7 @@ jobs:
           branch: ${{ steps.new_branch_name.outputs.branch }}-refactored
 
       - name: Update branch with base branch
-        run: git pull origin/${{ steps.new_branch_name.outputs.branch }}
+        run: git fetch origin ${{ steps.new_branch_name.outputs.branch }}:${{ steps.new_branch_name.outputs.branch }}
 
       - name: Reformat Code
         run: ./gradlew spotlessApply
