--- a/.github/workflows/refactor.yml
+++ b/.github/workflows/refactor.yml
@@ -66,15 +66,18 @@ jobs:
           commit_user_name: GitHub Actions
           commit_user_email: actions@github.com
 
+      - name: Reset base branch
+        run: |
+          git fetch origin ${{ steps.new_branch_name.outputs.branch }}:${{ steps.new_branch_name.outputs.branch }}
+          git reset --hard ${{ steps.new_branch_name.outputs.branch }}
+
       - name: Create Pull Request if changes have been detected
         if: steps.auto-commit-action.outputs.changes_detected == 'true'
         uses: peter-evans/create-pull-request@v3
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          git fetch origin ${{ steps.new_branch_name.outputs.branch }}:${{ steps.new_branch_name.outputs.branch }}
-          git reset --hard ${{ steps.new_branch_name.outputs.branch }}
         with:
           branch: ${{ steps.new_branch_name.outputs.branch }}
+          commit-message: Create auto PR for code reformatted
           title: Refactored code for branch name ${{ steps.new_branch_name.outputs.branch }}
           body: This is an auto refactored code.
