--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -5,28 +5,28 @@ spotless = "5.12.5"
 ben-manes-dependency-updates = "0.39.0"
 
 # Android
-android-gradle-plugin = "7.1.0-alpha02"
+android-gradle-plugin = "7.0.0-beta05"
 android-lint = "27.3.0-alpha05"
 
 # Android X
-androidx-compose = "1.0.0-beta08"
-androidx-lifecycle = "2.4.0-alpha01"
-androidx-room = "2.4.0-alpha02"
+androidx-compose = "1.0.0-rc01"
+androidx-lifecycle = "2.4.0-alpha02"
+androidx-room = "2.4.0-alpha03"
 androidx-test = "1.3.0"
 androidx-hilt = "1.0.0"
 
 #Coil
-coil = "1.2.2"
+coil = "1.3.0"
 
 # Google
-google-accompanist = "0.11.1"
-google-dagger = "2.36"
+google-accompanist = "0.13.0"
+google-dagger = "2.37"
 
 # Kotlin
 kotlin = "1.5.10"
 
 # Kotlin Coroutines
-kotlinx-coroutines = "1.5.0"
+kotlinx-coroutines = "1.5.1"
 
 # Moshi
 moshi = "1.12.0"
@@ -58,7 +58,7 @@ android-tools-sdk-common = { module = "com.android.tools:sdk-common", version.re
 androidx-annotation = { module = "androidx.annotation:annotation", version = "1.3.0-alpha01" }
 androidx-appcompat = { module = "androidx.appcompat:appcompat", version = "1.3.0" }
 androidx-constraintlayout-compose = { module = "androidx.constraintlayout:constraintlayout-compose", version = "1.0.0-alpha07" }
-androidx-core-ktx = { module = "androidx.core:core-ktx", version = "1.5.0" }
+androidx-core-ktx = { module = "androidx.core:core-ktx", version = "1.6.0" }
 androidx-palette = { module = "androidx.palette:palette-ktx", version = "1.0.0" }
 
 # AndroidX Compose
@@ -69,13 +69,14 @@ androidx-compose-layout = { module = "androidx.compose.foundation:foundation-lay
 androidx-compose-livedata = { module = "androidx.compose.runtime:runtime-livedata", version.ref = "androidx-compose" }
 androidx-compose-material = { module = "androidx.compose.material:material", version.ref = "androidx-compose" }
 androidx-compose-runtime = { module = "androidx.compose.runtime:runtime", version.ref = "androidx-compose" }
-androidx-compose-test = { module = "androidx.compose.ui:ui-test", version.ref = "androidx-compose" }
-androidx-compose-tooling = { module = "androidx.compose.ui:ui-tooling", version.ref = "androidx-compose" }
-androidx-compose-ui = { module = "androidx.compose.ui:ui", version.ref = "androidx-compose" }
+androidx-compose-ui-core = { module = "androidx.compose.ui:ui", version.ref = "androidx-compose" }
+androidx-compose-ui-test = { module = "androidx.compose.ui:ui-test", version.ref = "androidx-compose" }
+androidx-compose-ui-tooling = { module = "androidx.compose.ui:ui-tooling", version.ref = "androidx-compose" }
+androidx-compose-ui-preview = { module = "androidx.compose.ui:ui-tooling-preview", version.ref = "androidx-compose" }
 
 # Androidx Hilt
 androidx-hilt-compiler = { module = "androidx.hilt:hilt-compiler", version.ref = "androidx-hilt" }
-androidx-hilt-navigation-compose = { module = "androidx.hilt:hilt-navigation-compose", version = "1.0.0-alpha02" }
+androidx-hilt-navigation-compose = { module = "androidx.hilt:hilt-navigation-compose", version = "1.0.0-alpha03" }
 androidx-hilt-work = { module = "androidx.hilt:hilt-work", version.ref = "androidx-hilt" }
 
 # AndroidX Lifecycle
@@ -95,8 +96,8 @@ androidx-room-testing = { module = "androidx.room:room-testing", version.ref = "
 
 # AndroidX Test
 androidx-test-core = { module = "androidx.test:core", version.ref = "androidx-test" }
-androidx-test-espresso-core = { module = "androidx.test.espresso:espresso-core", version = "3.3.0" }
-androidx-test-ext-junit = { module = "androidx.test.ext:junit", version = "1.1.2" }
+androidx-test-espresso-core = { module = "androidx.test.espresso:espresso-core", version = "3.4.0" }
+androidx-test-ext-junit = { module = "androidx.test.ext:junit", version = "1.1.3" }
 androidx-test-rules = { module = "androidx.test:rules", version.ref = "androidx-test" }
 androidx-test-runner = { module = "androidx.test:runner", version.ref = "androidx-test" }
 
@@ -123,8 +124,8 @@ google-hilt-gradle-plugin = { module = "com.google.dagger:hilt-android-gradle-pl
 google-hilt-testing = { module = "com.google.dagger:hilt-android-testing", version.ref = "google-dagger" }
 
 # Google Material Theme
-google-material-compose-theme-adapter = { module = "com.google.android.material:compose-theme-adapter", version = "1.0.0-beta08" }
-google-material-core = { module = "com.google.android.material:material", version = "1.4.0-rc01" }
+google-material-compose-theme-adapter = { module = "com.google.android.material:compose-theme-adapter", version = "1.0.0-rc01" }
+google-material-core = { module = "com.google.android.material:material", version = "1.5.0-alpha01" }
 
 # Google Firebase
 google-firebase-crashlytics = { module = "com.google.firebase:firebase-crashlytics", version = "17.2.1" }
@@ -176,8 +177,8 @@ android-tools-lint = ["android-tools-layoutlib-api", "android-tools-lint-api",
 # AndroidX Compose
 androidx-compose = ["androidx-compose-animation", "androidx-compose-compiler",
     "androidx-compose-foundation", "androidx-compose-layout", "androidx-compose-livedata",
-    "androidx-compose-material", "androidx-compose-runtime", "androidx-compose-test",
-    "androidx-compose-tooling", "androidx-compose-ui"]
+    "androidx-compose-material", "androidx-compose-runtime", "androidx-compose-ui-core",
+    "androidx-compose-ui-test", "androidx-compose-ui-tooling", "androidx-compose-ui-preview"]
 
 # AndroidX Test
 androdidx-test = ["androidx-test-core", "androidx-test-ext-junit", "androidx-test-rules", "androidx-test-runner"]
