--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -5,7 +5,7 @@ spotless = "5.12.5"
 ben-manes-dependency-updates = "0.39.0"
 
 # Android
-android-gradle-plugin = "7.0.0-beta05"
+android-gradle-plugin = "7.0.0"
 android-lint = "27.3.0-alpha05"
 
 # Android X
@@ -20,7 +20,7 @@ coil = "1.3.0"
 
 # Google
 google-accompanist = "0.13.0"
-google-dagger = "2.37"
+google-dagger = "2.38.1"
 
 # Kotlin
 kotlin = "1.5.10"
