Updated dependencies - agp, compose, coil, room, hilt, navigation, gradle, lifecycle, kotlin, mdc, material, accompanist, constraintLayout
Added - viewmodel compose

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,7 @@
         android:theme="@style/Theme.Aphid">
         <activity
             android:name=".MainActivity"
+            android:exported="false"
             android:windowSoftInputMode="adjustResize">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
