--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -5,28 +5,28 @@ spotless = "5.12.5"
 ben-manes-dependency-updates = "0.39.0"
 
 # Android
-android-gradle-plugin = "7.0.0"
-android-lint = "27.3.0-alpha05"
+android-gradle-plugin = "7.1.0-alpha11"
+android-lint = "30.0.2"
 
 # Android X
-androidx-compose = "1.0.1"
-androidx-lifecycle = "2.4.0-alpha02"
-androidx-room = "2.4.0-alpha03"
+androidx-compose = "1.1.0-alpha03"
+androidx-lifecycle = "2.4.0-alpha03"
+androidx-room = "2.4.0-alpha04"
 androidx-test = "1.3.0"
 androidx-hilt = "1.0.0"
 
 #Coil
-coil = "1.3.0"
+coil = "1.3.2"
 
 # Google
-google-accompanist = "0.13.0"
+google-accompanist = "0.17.0"
 google-dagger = "2.38.1"
 
 # Kotlin
-kotlin = "1.5.21"
+kotlin = "1.5.30"
 
 # Kotlin Coroutines
-kotlinx-coroutines = "1.5.1"
+kotlinx-coroutines = "1.5.2"
 
 # Moshi
 moshi = "1.12.0"
@@ -46,7 +46,7 @@ retrofit = "2.9.0"
 # }
 
 # Android Gradle Plugin
-android-gradle-plugin = { module = "com.android.tools.build:gradle", version.ref = "android-gradle-plugin" }
+android-tools-build-gradle = { module = "com.android.tools.build:gradle", version.ref = "android-gradle-plugin" }
 
 # Android Lint
 android-tools-layoutlib-api = { module = "com.android.tools.layoutlib:layoutlib-api", version.ref = "android-lint" }
@@ -56,8 +56,8 @@ android-tools-sdk-common = { module = "com.android.tools:sdk-common", version.re
 
 # AndroidX
 androidx-annotation = { module = "androidx.annotation:annotation", version = "1.3.0-alpha01" }
-androidx-appcompat = { module = "androidx.appcompat:appcompat", version = "1.3.0" }
-androidx-constraintlayout-compose = { module = "androidx.constraintlayout:constraintlayout-compose", version = "1.0.0-alpha07" }
+androidx-appcompat = { module = "androidx.appcompat:appcompat", version = "1.3.1" }
+androidx-constraintlayout-compose = { module = "androidx.constraintlayout:constraintlayout-compose", version = "1.0.0-beta02" }
 androidx-core-ktx = { module = "androidx.core:core-ktx", version = "1.6.0" }
 androidx-palette = { module = "androidx.palette:palette-ktx", version = "1.0.0" }
 
@@ -84,11 +84,11 @@ androidx-hilt-navigation-compose = { module = "androidx.hilt:hilt-navigation-com
 androidx-hilt-work = { module = "androidx.hilt:hilt-work", version.ref = "androidx-hilt" }
 
 # AndroidX Lifecycle
-androidx-lifecycle-livedata-ktx = { module = "androidx.lifecycle:lifecycle-livedata-ktx", version.ref = "androidx-lifecycle" }
+androidx-lifecycle-viewmodel-compose = { module = "androidx.lifecycle:lifecycle-viewmodel-compose", version = "1.0.0-alpha07" }
 androidx-lifecycle-viewmodel-ktx = { module = "androidx.lifecycle:lifecycle-viewmodel-ktx", version.ref = "androidx-lifecycle" }
 
 # AndroidX Navigation
-androidx-navigation-compose = { module = "androidx.navigation:navigation-compose", version = "1.0.0-alpha10" }
+androidx-navigation-compose = { module = "androidx.navigation:navigation-compose", version = "2.4.0-alpha08" }
 
 # AndroidX Room
 androidx-room-common = { module = "androidx.room:room-common", version.ref = "androidx-room" }
@@ -111,9 +111,9 @@ androidx-work-runtime-ktx = { module = "androidx.work:work-runtime-ktx", version
 # Coil
 coil-core = { module = "io.coil-kt:coil", version.ref = "coil" }
 coil-svg = { module = "io.coil-kt:coil-svg", version.ref = "coil" }
+coil-compose = { module = "io.coil-kt:coil-compose", version.ref = "coil" }
 
 # Google Accompanist
-google-accompanist-coil = { module = "com.google.accompanist:accompanist-coil", version.ref = "google-accompanist" }
 google-accompanist-insets = { module = "com.google.accompanist:accompanist-insets", version.ref = "google-accompanist" }
 google-accompanist-flowlayout = { module = "com.google.accompanist:accompanist-flowlayout", version.ref = "google-accompanist" }
 
@@ -124,16 +124,15 @@ google-dagger-core = { module = "com.google.dagger:dagger", version.ref = "googl
 # Google Hilt
 google-hilt-android = { module = "com.google.dagger:hilt-android", version.ref = "google-dagger" }
 google-hilt-compiler = { module = "com.google.dagger:hilt-android-compiler", version.ref = "google-dagger" }
-google-hilt-gradle-plugin = { module = "com.google.dagger:hilt-android-gradle-plugin", version.ref = "google-dagger" }
+google-hilt-gradle = { module = "com.google.dagger:hilt-android-gradle-plugin", version.ref = "google-dagger" }
 google-hilt-testing = { module = "com.google.dagger:hilt-android-testing", version.ref = "google-dagger" }
 
 # Google Material Theme
-google-material-compose-theme-adapter = { module = "com.google.android.material:compose-theme-adapter", version = "1.0.0-rc01" }
-google-material-core = { module = "com.google.android.material:material", version = "1.5.0-alpha01" }
+google-material-compose-theme-adapter = { module = "com.google.android.material:compose-theme-adapter", version = "1.0.2" }
+google-material-core = { module = "com.google.android.material:material", version = "1.5.0-alpha03" }
 
 # Google Firebase
 google-firebase-crashlytics = { module = "com.google.firebase:firebase-crashlytics", version = "17.2.1" }
-#google-firebase-crashlytics-gradle-plugin = { module = "com.google.firebase:firebase-crashlytics-gradle", version = "2.2.0" }
 
 # Google Truth
 google-truth = { module = "com.google.truth:truth", version = "1.1.3" }
@@ -143,7 +142,7 @@ leakcanary = { module = "com.squareup.leakcanary:leakcanary-android", version = 
 
 # Kotlin
 kotlin-stdlib-jdk8 = { module = "org.jetbrains.kotlin:kotlin-stdlib-jdk8", version.ref = "kotlin" }
-kotlin-gradle-plugin = { module = "org.jetbrains.kotlin:kotlin-gradle-plugin", version.ref = "kotlin" }
+kotlin-gradle = { module = "org.jetbrains.kotlin:kotlin-gradle-plugin", version.ref = "kotlin" }
 
 # Kotlin Coroutine
 kotlinx-coroutines-android = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-android", version.ref = "kotlinx-coroutines" }
@@ -188,7 +187,7 @@ androidx-compose = ["androidx-compose-animation", "androidx-compose-compiler",
 androdidx-test = ["androidx-test-core", "androidx-test-ext-junit", "androidx-test-rules", "androidx-test-runner"]
 
 # Google Accompanist
-google-accompanist = ["google-accompanist-coil", "google-accompanist-insets", "google-accompanist-flowlayout"]
+google-accompanist = ["google-accompanist-insets", "google-accompanist-flowlayout"]
 
 # Moshi
 moshi = ["moshi-adapters", "moshi-core", "moshi-kotlin"]
