--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -9,18 +9,18 @@ android-gradle-plugin = "7.2.0-alpha07"
 android-lint = "30.0.2"
 
 # Android X
-androidx-compose = "1.2.0-alpha01"
-androidx-lifecycle = "2.4.0"
-androidx-room = "2.4.1"
+androidx-compose = "1.2.0-alpha04"
+androidx-lifecycle = "2.5.0-alpha03"
+androidx-room = "2.5.0-alpha01"
 androidx-test = "1.3.0"
 androidx-hilt = "1.0.0"
 
 #Coil
-coil = "2.0.0-alpha06"
+coil = "2.0.0-rc01"
 
 # Google
-google-accompanist = "0.24.0-alpha"
-google-dagger = "2.40.5"
+google-accompanist = "0.24.3-alpha"
+google-dagger = "2.41"
 
 # Kotlin
 kotlin = "1.6.10"
@@ -32,7 +32,7 @@ kotlinx-coroutines = "1.6.0"
 moshi = "1.13.0"
 
 # OkHttp
-okhttp = "5.0.0-alpha.3"
+okhttp = "5.0.0-alpha.5"
 
 # Retrofit
 retrofit = "2.9.0"
@@ -55,10 +55,10 @@ android-tools-lint-checks = { module = "com.android.tools.lint:lint-checks", ver
 android-tools-sdk-common = { module = "com.android.tools:sdk-common", version.ref = "android-lint" }
 
 # AndroidX
-androidx-annotation = { module = "androidx.annotation:annotation", version = "1.4.0-alpha01" }
-androidx-appcompat = { module = "androidx.appcompat:appcompat", version = "1.4.1" }
+androidx-annotation = { module = "androidx.annotation:annotation", version = "1.4.0-alpha02" }
+androidx-appcompat = { module = "androidx.appcompat:appcompat", version = "1.6.0-alpha01" }
 androidx-constraintlayout-compose = { module = "androidx.constraintlayout:constraintlayout-compose", version = "1.0.0" }
-androidx-core-ktx = { module = "androidx.core:core-ktx", version = "1.8.0-alpha02" }
+androidx-core-ktx = { module = "androidx.core:core-ktx", version = "1.9.0-alpha01" }
 androidx-palette = { module = "androidx.palette:palette-ktx", version = "1.0.0" }
 
 # AndroidX Compose
@@ -80,7 +80,7 @@ androidx-compose-ui-test = { module = "androidx.compose.ui:ui-test", version.ref
 
 # Androidx Hilt
 androidx-hilt-compiler = { module = "androidx.hilt:hilt-compiler", version.ref = "androidx-hilt" }
-androidx-hilt-navigation-compose = { module = "androidx.hilt:hilt-navigation-compose", version = "1.0.0-rc01" }
+androidx-hilt-navigation-compose = { module = "androidx.hilt:hilt-navigation-compose", version = "1.0.0" }
 androidx-hilt-work = { module = "androidx.hilt:hilt-work", version.ref = "androidx-hilt" }
 
 # AndroidX Lifecycle
@@ -88,7 +88,7 @@ androidx-lifecycle-viewmodel-compose = { module = "androidx.lifecycle:lifecycle-
 androidx-lifecycle-viewmodel-ktx = { module = "androidx.lifecycle:lifecycle-viewmodel-ktx", version.ref = "androidx-lifecycle" }
 
 # AndroidX Navigation
-androidx-navigation-compose = { module = "androidx.navigation:navigation-compose", version = "2.4.0-rc01" }
+androidx-navigation-compose = { module = "androidx.navigation:navigation-compose", version = "2.5.0-alpha03" }
 
 # AndroidX Room
 androidx-room-common = { module = "androidx.room:room-common", version.ref = "androidx-room" }
@@ -100,8 +100,8 @@ androidx-room-testing = { module = "androidx.room:room-testing", version.ref = "
 
 # AndroidX Test
 androidx-test-core = { module = "androidx.test:core", version.ref = "androidx-test" }
-androidx-test-espresso-core = { module = "androidx.test.espresso:espresso-core", version = "3.5.0-alpha03" }
-androidx-test-ext-junit = { module = "androidx.test.ext:junit", version = "1.1.4-alpha03" }
+androidx-test-espresso-core = { module = "androidx.test.espresso:espresso-core", version = "3.5.0-alpha04" }
+androidx-test-ext-junit = { module = "androidx.test.ext:junit", version = "1.1.4-alpha04" }
 androidx-test-rules = { module = "androidx.test:rules", version.ref = "androidx-test" }
 androidx-test-runner = { module = "androidx.test:runner", version.ref = "androidx-test" }
 
@@ -128,8 +128,8 @@ google-hilt-gradle = { module = "com.google.dagger:hilt-android-gradle-plugin", 
 google-hilt-testing = { module = "com.google.dagger:hilt-android-testing", version.ref = "google-dagger" }
 
 # Google Material Theme
-google-material-compose-theme-adapter = { module = "com.google.android.material:compose-theme-adapter", version = "1.1.3" }
-google-material-core = { module = "com.google.android.material:material", version = "1.6.0-alpha02" }
+google-material-compose-theme-adapter = { module = "com.google.android.material:compose-theme-adapter", version = "1.1.5" }
+google-material-core = { module = "com.google.android.material:material", version = "1.6.0-alpha03" }
 
 # Google Firebase
 google-firebase-crashlytics = { module = "com.google.firebase:firebase-crashlytics", version = "17.2.1" }
