updated path used for dependency-updates reports

--- a/.github/workflows/scheduled.yml
+++ b/.github/workflows/scheduled.yml
@@ -28,4 +28,4 @@ jobs:
         uses: actions/upload-artifact@v1
         with:
           name: dependency-updates
-          path: app/build/reports
+          path: ./reports/dependency-updates
